fix full height on mobile

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .full-height {
-  height: 100vh;
+  min-height: 100vh;
   padding: 0;
 }
 .full-width {
